sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:4: error: ';' expected but '=' found.
vat m : Int = 0;
            ^AlgCocktailSort2:5: error: ';' expected but '=' found.
vat l : Int = 0;
            ^